<resources>
    <string name="app_name">Diploma</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">posts</string>
    <string name="events">events</string>
    <string name="users">users</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="sign_out">sign_out</string>
    <string name="add_post">add_post</string>
    <string name="need_permission">Permission needed</string>
    <string name="add_event">Add event</string>
    <string name="error_loading">error_loading</string>
    <string name="retry_loading">retry_loading</string>
    <string name="no_posts">No posts</string>
    <string name="back">Back</string>
    <string name="likers">Likers</string>
    <string name="user_avatar">user_avatar</string>
    <string name="post_author_avatar">post_author_avatar</string>
    <string name="post_menu_onepost">post_menu_onePost</string>
    <string name="track">Track</string>
    <string name="format">Format</string>
    <string name="date">Date</string>
    <string name="speakers">Speakers</string>
    <string name="speaker_avatar">speaker_avatar</string>
    <string name="likeicon">likeIcon</string>
    <string name="liker_avatar">liker_avatar</string>
    <string name="participantsicon">ParticipantsIcon</string>
    <string name="participant_avatar">participant_avatar</string>
    <string name="mentionedicon">MentionedIcon</string>
    <string name="mentioned_avatar">mentioned_avatar</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="sign_in_to_proceed">Sign in to proceed</string>
    <string name="sign_up_to_proceed">Sign up to proceed</string>
    <string name="no_thank_you">No, thank you</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="no_i_ll_stay">No, I\'ll stay</string>
    <string name="yes_sign_out">Yes, sign out</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_the_date_amp_time"><![CDATA[Choose the date & time]]></string>
    <string name="description_photo">description_photo</string>
    <string name="description_video">description_video</string>
    <string name="remove_nattachment">remove\nAttachment</string>
    <string name="remove_nlocation">remove\nLocation</string>
    <string name="remove_nspeakers">remove\nSpeakers</string>
    <string name="take_photo">take_photo</string>
    <string name="select_photo">select_photo</string>
    <string name="link">link</string>
    <string name="choose_speakers">Choose speakers</string>
    <string name="choose_place">choose place</string>
    <string name="remove_nmentioned">remove\nMentioned</string>
    <string name="choose_users">Choose users</string>
    <string name="let_s_get_started">Let\'s get started !</string>
    <string name="my_location">My location</string>
    <string name="choose_date_time_format">Choose date, time, format</string>
    <string name="choose_the_date_time_amp_format"><![CDATA[Choose the date, time & format]]></string>
    <string name="remove">remove</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="create">Create</string>
    <string name="event_author_avatar">event_author_avatar</string>
    <string name="company">Company</string>
    <string name="dash">-</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="your_name">Your name</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="looking_for_a_job">Looking for a job</string>
    <string name="select_a_file">Select a File</string>
    <string name="removed">Removed</string>
    <string name="something_went_wrong">Sorry :( \nSomething went wrong \nTry again</string>
    <string name="choose_the_date_of_your_event">Choose the date of your event</string>
    <string name="mentioned_users">Mentioned users</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="fields_cant_be_empty">Fields can\'t be empty</string>
    <string name="google_Api_Unavailable">Google Api Unavailable</string>
    <string name="tap_the_place_to_choose">Tap the place you\'d like to choose</string>
    <string name="tap_here_to_save_location">Tap here to save location:</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="jpeg_png_only_maximum_size_2048_2048">jpeg, png format only &amp;the maximum size is 2048*2048</string>
    <string name="such_user_is_already_registered">Such user is already registered</string>

</resources>