<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DialogFragmentSignOut"
    android:paddingHorizontal="52dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signOutRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_sign_out"
        android:textAlignment="center"
        android:backgroundTint="@color/see"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/noStay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noStay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_i_ll_stay"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:backgroundTint="@color/see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yesSignOut"
        android:layout_marginBottom="64dp"
        android:padding="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes_sign_out"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:backgroundTint="@color/see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:padding="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>