<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DialogFragmentSignIn"
    android:layout_gravity="center"
    android:paddingHorizontal="54dp"
    android:paddingVertical="64dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_proceed"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:backgroundTint="@color/see"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpRequest"
        android:layout_marginBottom="48dp"
        android:padding="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_proceed"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:backgroundTint="@color/see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/noThankYou"
        android:layout_marginBottom="72dp"
        android:padding="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noThankYou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_thank_you"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:backgroundTint="@color/see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>